--- a/index.html
+++ b/index.html
@@ -42,6 +42,21 @@
     </iframe>
   </section>
 
+  <section class="sliding_icons">
+    <div class="icons_container">
+      <img src="images/sony_img.png" alt="sony_img">
+      <img src="images/sharp_img.png" alt="sharp_img">
+      <img src="images/samsung_img.png" alt="samsung_img">
+      <img src="images/whirlpool_img.png" alt="whirlpool_img">
+      <img src="images/haier_img.png" alt="haier_img">
+      <img src="images/lg_img.png" alt="lg_img">
+      <img src="images/panasonic_img.png" alt="panasonic_img">
+      <img src="images/carrier_img.png" alt="carrier_img">
+      <img src="images/condura_img.png" alt="condura_img">
+      <img src="images/tcl_img.png" alt="tcl_img">
+    </div>
+  </section>
+
   <section class="store_loc_info" data-aos="fade-right" data-aos-duration="1000" data-aos-once="false">
     <div class="map_info">
       <p>
