--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <ul class="header_nav">
       <a href="#ABOUT"><li>ABOUT</li></a>
       <a href="#PRODUCTS"><li>PRODUCTS</li></a>
+      <a href="#CONTACT"><li>CONTACT</li></a>
     </ul>
   </header>
 
@@ -54,6 +55,26 @@
       <img src="images/carrier_img.png" alt="carrier_img">
       <img src="images/condura_img.png" alt="condura_img">
       <img src="images/tcl_img.png" alt="tcl_img">
+    </div>
+  </section>
+
+  <section class="customers_sample">
+    <div class="customers_title" data-aos="fade-right" data-aos-duration="1000" data-aos-once="false">
+      <h1>
+        TRUSTED EVER SINCE
+      </h1>
+    </div>
+    <div class="customers_container" data-aos="fade-left" data-aos-duration="1000" data-aos-once="false">
+      <img src="customers/customer_six.jpg" alt="customer_six_img">
+      <img src="customers/customer_nineteen.jpg" alt="customer_seven_img">
+      <img src="customers/customer_four.jpg" alt="customer_eight_img">
+      <img src="customers/customer_nine.jpg" alt="customer_nine_img">
+      <img src="customers/customer_ten.jpg" alt="customer_ten_img">
+      <img src="customers/customer_eleven.jpg" alt="customer_eleven_img">
+      <img src="customers/customer_twelve.jpg" alt="customer_twelve_img">
+      <img src="customers/customer_two.jpg" alt="customer_thirteen_img">
+      <img src="customers/customer_fourteen.jpg" alt="customer_fourteen_img">
+      <img src="customers/customer_fifteen.jpg" alt="customer_fifteen_img">
     </div>
   </section>
 
