--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="styles/body.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Philosopher:ital,wght@0,400;0,700;1,400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
@@ -167,7 +168,29 @@
     </div>
   </section>
 
-  <section class="contacts_section">
+  <section class="services_icons" data-aos="fade-left" data-aos-duration="1000" data-aos-once="false">
+    <div class="warehouse_icon" data-aos="flip-right" data-aos-duration="1000" data-aos-once="false">
+      <i class="fa-solid fa-warehouse fa-2xl" style="color: #ffffff;"></i>
+      <p>DIRECT FROM WAREHOUSE</p>
+    </div>
+
+    <div class="discount_icon" data-aos="flip-right" data-aos-duration="1000" data-aos-once="false">
+      <i class="fa-solid fa-tag fa-2xl" style="color: #ffffff;"></i>
+      <p>DISCOUNTED PRODUCTS</p>
+    </div>
+
+    <div class="quality_icon" data-aos="flip-right" data-aos-duration="1000" data-aos-once="false">
+      <i class="fa-solid fa-check-double fa-2xl" style="color: #ffffff;"></i>
+      <p>QUALITY ASSURANCE</p>
+    </div>
+
+    <div class="message_icon" data-aos="flip-right" data-aos-duration="1000" data-aos-once="false">
+      <i class="fa-solid fa-envelope-open-text fa-2xl" style="color: #ffffff;"></i>
+      <p>RESPONSIVE DEALER</p>
+    </div>
+  </section>
+
+  <section class="contact_section" id="CONTACT">
 
   </section>
     
