--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
       <p class="overview_description">
         At Remon Trading, we take pride in being your go-to destination for high-quality appliances at unbeatable prices. Located in the heart of Binangonan, Rizal, we are a trusted and established brand in the local community, serving customers with top-notch products and exceptional service. 
       </p>
-      <button class="visit_now">VISIT NOW</button>
+      <button class="visit_now">
+        <a href="https://www.bing.com/search?pglt=43&q=remon+trading&cvid=140fdc6d996345969a28eb2d7e43d201&gs_lcrp=EgZjaHJvbWUqBggCEEUYOzIGCAAQRRg5MgYIARAAGEAyBggCEEUYOzIGCAMQABhAMgYIBBAAGEAyBggFEAAYQDIGCAYQRRg8MgYIBxBFGD0yBggIEEUYPdIBCDM2MDRqMGoxqAIAsAIA&FORM=ANNTA1&PC=U531" target="_blank">
+          VISIT NOW
+        </a>
+      </button>
     </div>
     <iframe class="embedded_yt" width="350" height="300" src="https://www.youtube.com/embed/EN97pE-tN2g?si=1di6Iai9D0-JkDxA" 
             title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
@@ -44,18 +48,25 @@
     </iframe>
   </section>
 
-  <section class="sliding_icons">
-    <div class="icons_container">
-      <img src="images/sony_img.png" alt="sony_img">
-      <img src="images/sharp_img.png" alt="sharp_img">
-      <img src="images/samsung_img.png" alt="samsung_img">
-      <img src="images/whirlpool_img.png" alt="whirlpool_img">
-      <img src="images/haier_img.png" alt="haier_img">
-      <img src="images/lg_img.png" alt="lg_img">
-      <img src="images/panasonic_img.png" alt="panasonic_img">
-      <img src="images/carrier_img.png" alt="carrier_img">
-      <img src="images/condura_img.png" alt="condura_img">
-      <img src="images/tcl_img.png" alt="tcl_img">
+  <section class="services_icons" data-aos="fade-left" data-aos-duration="1000" data-aos-once="false">
+    <div class="warehouse_icon" data-aos="flip-right" data-aos-duration="1000" data-aos-once="false">
+      <i class="fa-solid fa-warehouse fa-2xl" style="color: #000000;"></i>
+      <p>DIRECT FROM WAREHOUSE</p>
+    </div>
+
+    <div class="discount_icon" data-aos="flip-right" data-aos-duration="1000" data-aos-once="false">
+      <i class="fa-solid fa-tag fa-2xl" style="color: #000000;"></i>
+      <p>DISCOUNTED PRODUCTS</p>
+    </div>
+
+    <div class="quality_icon" data-aos="flip-right" data-aos-duration="1000" data-aos-once="false">
+      <i class="fa-solid fa-check-double fa-2xl" style="color: #000000;"></i>
+      <p>QUALITY ASSURANCE</p>
+    </div>
+
+    <div class="message_icon" data-aos="flip-right" data-aos-duration="1000" data-aos-once="false">
+      <i class="fa-solid fa-envelope-open-text fa-2xl" style="color: #000000;"></i>
+      <p>RESPONSIVE DEALER</p>
     </div>
   </section>
 
@@ -168,30 +179,66 @@
     </div>
   </section>
 
-  <section class="services_icons" data-aos="fade-left" data-aos-duration="1000" data-aos-once="false">
-    <div class="warehouse_icon" data-aos="flip-right" data-aos-duration="1000" data-aos-once="false">
-      <i class="fa-solid fa-warehouse fa-2xl" style="color: #ffffff;"></i>
-      <p>DIRECT FROM WAREHOUSE</p>
-    </div>
-
-    <div class="discount_icon" data-aos="flip-right" data-aos-duration="1000" data-aos-once="false">
-      <i class="fa-solid fa-tag fa-2xl" style="color: #ffffff;"></i>
-      <p>DISCOUNTED PRODUCTS</p>
-    </div>
-
-    <div class="quality_icon" data-aos="flip-right" data-aos-duration="1000" data-aos-once="false">
-      <i class="fa-solid fa-check-double fa-2xl" style="color: #ffffff;"></i>
-      <p>QUALITY ASSURANCE</p>
-    </div>
-
-    <div class="message_icon" data-aos="flip-right" data-aos-duration="1000" data-aos-once="false">
-      <i class="fa-solid fa-envelope-open-text fa-2xl" style="color: #ffffff;"></i>
-      <p>RESPONSIVE DEALER</p>
+  <section class="sliding_icons">
+    <div class="icons_container">
+      <img src="images/sony_img.png" alt="sony_img">
+      <img src="images/sharp_img.png" alt="sharp_img">
+      <img src="images/samsung_img.png" alt="samsung_img">
+      <img src="images/whirlpool_img.png" alt="whirlpool_img">
+      <img src="images/haier_img.png" alt="haier_img">
+      <img src="images/lg_img.png" alt="lg_img">
+      <img src="images/panasonic_img.png" alt="panasonic_img">
+      <img src="images/carrier_img.png" alt="carrier_img">
+      <img src="images/condura_img.png" alt="condura_img">
+      <img src="images/tcl_img.png" alt="tcl_img">
     </div>
   </section>
 
-  <section class="contact_section" id="CONTACT">
+  <section class="outro_section" data-aos="fade-right" data-aos-duration="1000" data-aos-once="false">
+    <img src="images/remon_location.png" alt="remon_location_img">
+    <div class="outro_section_description">
+      <p>
+        At Remon Trading, we provide a comprehensive range of home appliances to fulfill your needs. 
+        Discover a variety of kitchen essentials, laundry solutions, and HVAC (Heating, Ventilation, and Air Conditioning) systems, all conveniently available in one place. 
+        Find everything you require for your home with ease.
+      </p>
+    </div>
+  </section>
 
+  <section class="contact_section" id="CONTACT" data-aos="fade-left" data-aos-duration="1000" data-aos-once="false">
+    <div class="connect_to_us">
+      <h1>
+        CONNECT WITH US
+      </h1>
+
+      <div class="buttons_container">
+        <button class="fb_button"  data-aos="flip-right" data-aos-duration="1000" data-aos-once="false">
+          <a href="https://www.facebook.com/BUDGETEDSAAPPLIANCESSIREMONANGHANAPINMOPARATIPIDKA" target="_blank">
+            <i class="fa-brands fa-facebook fa-2xl"  style="color: #ffffff;"></i>
+          </a>
+        </button>
+
+        <button class="email_button"  data-aos="flip-right" data-aos-duration="1000" data-aos-once="false">
+          <a href="mailto:r_endaya@yahoo.com" target="_blank">
+            <i class="fa-solid fa-envelope fa-2xl" style="color: #ffffff;"></i>
+          </a>
+        </button>
+
+        <button class="youtube_button"  data-aos="flip-right" data-aos-duration="1000" data-aos-once="false">
+          <a href="https://www.youtube.com/@RemonTradingAngTotoongBodega" target="_blank">
+            <i class="fa-brands fa-youtube fa-2xl" style="color: #ffffff;"></i>
+          </a>
+        </button>
+      </div>
+
+      <p>
+        Remon Trading We Buy and Sell - Binangonan, Rizal
+      </p>
+
+      <p class="programmer_note">
+       Programmed By: Raven David, Computer Engineer
+      </p>
+    </div>
   </section>
     
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
