--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Philosopher:ital,wght@0,400;0,700;1,400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <link rel="stylesheet" href="styles/responsive.css">
 
 </head>
 <body>
@@ -22,10 +23,15 @@
       <img class="remon_trading_logo" src="images/remon_trading_logo.jpg" alt="remon_trading_logo">
     </a>
     <ul class="header_nav">
-      <a href="#ABOUT"><li>ABOUT</li></a>
-      <a href="#PRODUCTS"><li>PRODUCTS</li></a>
-      <a href="#CONTACT"><li>CONTACT</li></a>
+      <a href="#ABOUT"><li class="nav_li">ABOUT</li></a>
+      <a href="#PRODUCTS"><li class="nav_li">PRODUCTS</li></a>
+      <a href="#CONTACT"><li class="nav_li">CONTACT</li></a>
     </ul>
+    <div class="burger_menu">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </div>
   </header>
 
   <section class="overview" id="ABOUT">
