--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <section class="overview" id="ABOUT">
     <div class="overview_informations">
       <h1 class="overview_text">
-        Remon Trading We Buy and Sell
+        Remon Trading <span class="overflow_text_cont">We Buy and Sell</span>
       </h1>
       <p class="overview_description">
         At Remon Trading, we take pride in being your go-to destination for high-quality appliances at unbeatable prices. Located in the heart of Binangonan, Rizal, we are a trusted and established brand in the local community, serving customers with top-notch products and exceptional service. 
